mpi: Fix redefinition of types.

* mpi/mpi-internal.h (mpi_ptr_t): Remove, as it moved to mpi.h.
(mpi_size_t): Likewise.

--

Fixes-commit: 88ae76d069c331ad947ecab8419df9a00f979b0e
GnuPG-bug-id: 7775
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>